force-app/main/default/objects/SWIFT_Milestones__c/SWIFT_Milestones__c.object-meta.xml
<CustomObject>
    <label>SWIFT Milestones</label>
    <nameField>
        <label>SWIFT Milestones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWIFT Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>