force-app/main/default/objects/SWIFT_Milestones__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SWIFT Milestones</relationshipLabel>
    <relationshipName>SWIFT_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>