force-app/main/default/objects/SWIFT_Milestones__c/fields/Milestone_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SWIFT_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>