force-app/main/default/objects/SWIFT_Milestones__c/fields/Milestone_Completion_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completion_DateTime__c</fullName>
    <label>Milestone Completion Date/ Time</label>
    <type>DateTime</type>
</CustomField>