force-app/main/default/objects/SWIFT_Milestones__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerobridge/Bus Gate</fullName>
            </value>
            <value>
                <fullName>Boarding Gate</fullName>
            </value>
            <value>
                <fullName>Checkin Counter</fullName>
            </value>
            <value>
                <fullName>Curbside</fullName>
            </value>
            <value>
                <fullName>Guest Welcomed</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Security Check</fullName>
            </value>
            <value>
                <fullName>Service Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>